--- a/content/08-cardano-sidechains/03-example-evm-sidechain/01-network-details.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/01-network-details.mdx
@@ -21,7 +21,7 @@ The Example EVM sidechain testnet environment consists of two networks:
 
 |  |  | 
 | --- | :---: |
-| RPC | https://faucet.sidechain.evmtestnet.iohkdev.io/ |
+| RPC | `https://faucet.sidechain.evmtestnet.iohkdev.io/` (same url as faucet) |
 | Block Explorer | http://explorer.sidechain.evmtestnet.iohkdev.io/   |
 | Faucet | https://faucet.sidechain.evmtestnet.iohkdev.io/   |
 
