fix: commit feedback

--- a/content/08-cardano-sidechains/03-example-evm-sidechain/02-create-and-fund-accounts.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/02-create-and-fund-accounts.mdx
@@ -42,4 +42,6 @@ Request test ada using the web-app: https://faucet.cardano.evmtestnet.iohkdev.io
 
 Create a sidechain account using a compatible Web3 wallet connected to the EVM sidechain test network (ex: MetaMask).
 
+- [Working with MetaMask](/metamask).
+
 Request test `SC_Token` using the web-app: https://faucet.sidechain.evmtestnet.iohkdev.io/
