--- a/content/08-cardano-sidechains/03-example-evm-sidechain/03-metamask.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/03-metamask.mdx
@@ -22,7 +22,7 @@ Back up your wallet seed phrase and store it in a safe place.
 
 Settings > Networks > Add Network > Input the following settings and save.
 
-- Network Name: `EVM sidechain Tesnet`
+- Network Name: `EVM sidechain Testnet`
 - New RPC URL: `https://faucet.sidechain.evmtestnet.iohkdev.io/`
 - Chain ID: `78`
 - Currency Symbol: `SC_Token`<sup>1</sup>
