--- a/content/13-pioneer-programs/01-plutus-pioneers.mdx
+++ b/content/13-pioneer-programs/01-plutus-pioneers.mdx
@@ -17,8 +17,6 @@ It is a program to recruit and train developers in Plutus for the Cardano ecosys
 
 This course is not for coding beginners. While you do not need to be an expert in formal methods, programming experience and a general aptitude for logical and mathematical thinking are highly desirable. Some prior knowledge of Haskell or functional programming is also recommended, as Plutus is heavily based on Haskell and includes advanced features like Template Haskell, type-level programming, and effect systems. We recommend that you read the  [Learn You a Haskell guide](http://learnyouahaskell.com/)  before taking the course.
 
-Please register your interest using the form below and we will be in touch.
-
 ## What can I expect to learn?
 
 This course involves approximately ten hours a week of your time and efforts. It covers the building blocks of Haskell and Plutus, including:
@@ -27,24 +25,21 @@ This course involves approximately ten hours a week of your time and efforts. It
 -   Type classes
 -   Monads
 -   Template Haskell
--   Using the Plutus Playground
 -   Extended UTXO model
 -   Working with Plutus (on and off the chain)
 -   Minting policies
 -   State machines
--   The Plutus application framework (PAF)
--   The Plutus application backend (PAB)
 -   Some case studies and practical exercises
 
 As with all learning experiences, the more you put in the more you will get out!
 
 ## When can I join?
 
-Our third course has just finished. Depending on demand, we plan to open up a fourth cohort later in the summer, so please register your interest today to hear more in due course.
+We plan to open up a fourth cohort soon, so please register your interest today using the form below to find out more. 
 
 ## How can I register for the Plutus Pioneer program?
 
-If you are interested in joining a future cohort of this program, please complete the registration form below. You will receive a short application form, and we will be in touch when we have fresh course dates to offer.
+If you are interested in joining a future cohort of this program, please complete the registration form below. You will receive a short application form, and we will be in touch soon.
 
 ## Will I be certified?
 
