--- a/content/08-cardano-sidechains/03-example-evm-sidechain/04-deploy-smart-contracts/02-setup-development.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/04-deploy-smart-contracts/02-setup-development.mdx
@@ -15,7 +15,7 @@ This tutorial will show you how to deploy a Solidity smart contract to the EVM s
 
 ## Prerequisites
 
-In this tutorial, you will use MetaMask as your wallet and Web3 provider. If you have not done so already, [create or import an account with MetaMask](../03-metamask.mdx) and fund your wallet with testnet tokens using the [faucet](https://faucet.sidechain.evmtestnet.iohkdev.io/).
+In this tutorial, you will use MetaMask as your wallet and Web3 provider. If you have not done so already, [create or import an account with MetaMask](../metamask) and fund your wallet with testnet tokens using the [faucet](https://faucet.sidechain.evmtestnet.iohkdev.io/).
 
 ## Step 1 - Configure Remix
 
