Eliminate a 404, add a missing continuation mark in one shell script.

--- a/content/08-cardano-sidechains/03-example-evm-sidechain/06-transferring-tokens.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/06-transferring-tokens.mdx
@@ -190,7 +190,7 @@ Example output:
 To transfer `SC_Token` from the main chain to a sidechain, use the **sidechain-cli** to burn main-chain `SC_Token`.
 
 ```shell
-./sidechain-cli burn-sc-token 
+./sidechain-cli burn-sc-token \
 --signing-key-file payment.skey \
 --sc-evm-url https://faucet.sidechain.evmtestnet.iohkdev.io/ \
 --recipient ae3dffee97f92db0201d11cb8877c89738353bce \
