--- a/content/08-cardano-sidechains/03-example-evm-sidechain/03-metamask.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/03-metamask.mdx
@@ -26,7 +26,7 @@ Settings > Networks > Add Network > Input the following settings and save.
 - New RPC URL: `https://faucet.sidechain.evmtestnet.iohkdev.io/`
 - Chain ID: `78`
 - Currency Symbol: `SC_Token`<sup>1</sup>
-- Block Explorer URL: `http://explorer.sidechain.evmtestnet.iohkdev.io/`
+- Block Explorer URL: `https://explorer.sidechain.evmtestnet.iohkdev.io/`
 
 Now you can select the Cardano EVM sidechain network from MetaMask:
 
