--- a/content/08-cardano-sidechains/03-example-evm-sidechain/04-deploy-smart-contracts/02-setup-development.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/04-deploy-smart-contracts/02-setup-development.mdx
@@ -78,7 +78,7 @@ When the contract is compiled, you can view contract ABI, Bytecode, and more inf
 
 To verify that the smart contract was deployed on the sidechain testnet you can:
 
-- Search the transaction hash or contract address on the EVM sidechain [testnet explorer](http://explorer.sidechain.evmtestnet.iohkdev.io/).
+- Search the transaction hash or contract address on the EVM sidechain [testnet explorer](https://explorer.sidechain.evmtestnet.iohkdev.io/).
 - Open MetaMask and see if the contract deployment transaction was successfully signed.
 - Check Remix logs for deployment details.
   
@@ -239,7 +239,7 @@ $ npx hardhat run scripts/deploy.js --network evm-sidechain
 Greeter deployed to: 0x95E1C8F6C00d8cB518faBA33c8Ae814fc12E3090
 ```
 
-🎉 Hurray! You deployed your smart contract to EVM sidechain testnet and can search your deployment on the [testnet explorer](http://explorer.sidechain.evmtestnet.iohkdev.io/).
+🎉 Hurray! You deployed your smart contract to EVM sidechain testnet and can search your deployment on the [testnet explorer](https://explorer.sidechain.evmtestnet.iohkdev.io/).
 
 # Truffle
 
@@ -291,4 +291,4 @@ At this point, you've defined the EVM sidechain testnet and your testnet account
 $ truffle migrate --network evm-sidechain
 ```
 
-Upon executing `truffle migrate`, Truffle will return the transaction hash and contract address which can be searched on the EVM sidechain [testnet explorer](http://explorer.sidechain.evmtestnet.iohkdev.io/).
+Upon executing `truffle migrate`, Truffle will return the transaction hash and contract address which can be searched on the EVM sidechain [testnet explorer](https://explorer.sidechain.evmtestnet.iohkdev.io/).
