--- a/content/08-cardano-sidechains/03-example-evm-sidechain/04-deploy-smart-contracts/04-solidity-resources.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/04-deploy-smart-contracts/04-solidity-resources.mdx
@@ -15,7 +15,7 @@ Its home is [Soliditylang.org](https://soliditylang.org/). That is the place to 
 
 ## Education courses
 
-Most of the online education providers including [Udemy](https://udemy.org), [Tutorials Point](https://www.tutorialspoint.com/index.htm), and [O'Reilly](https://www.oreilly.com/) offer courses.  
+Most of the online education providers including [Udemy](https://udemy.com), [Tutorials Point](https://www.tutorialspoint.com/index.htm), and [O'Reilly](https://www.oreilly.com/) offer courses.  
 
 IO Global does not offer or endorse any courses.
 
