added launch date for PPP4

--- a/content/13-pioneer-programs/01-plutus-pioneers.mdx
+++ b/content/13-pioneer-programs/01-plutus-pioneers.mdx
@@ -35,7 +35,7 @@ As with all learning experiences, the more you put in the more you will get out!
 
 ## When can I join?
 
-We plan to open up a fourth cohort soon, so please register your interest today using the form below to find out more. 
+We are launching our fourth cohort on February 20th, so please register your interest today using the form below to find out more details. 
 
 ## How can I register for the Plutus Pioneer program?
 
