ETCM-3325 Minor corrections to Cardano docs. Mlabs access issue not yet resolved.

--- a/content/08-cardano-sidechains/02-sidechain-toolkit/01-mainchain-plutus-scripts.mdx
+++ b/content/08-cardano-sidechains/02-sidechain-toolkit/01-mainchain-plutus-scripts.mdx
@@ -136,7 +136,7 @@ A validator script verifies the following:
 
 <figcaption align = "center"><i>Merkle root token minting</i></figcaption><br />
 
-The Merkle tree has to be constructed in the exact same way as it is done by the following [Merkle tree implementation](https://github.com/mlabs-haskell/trustless-sidechain/blob/master/src/TrustlessSidechain/MerkleTree.hs). Entries in the tree should be calculated as follows:
+The Merkle tree has to be constructed in the exact same way as it is done by the following Merkle tree implementation. Entries in the tree should be calculated as follows:
 
 ```haskell
 data MerkleTreeEntry = MerkleTreeEntry
