--- a/content/08-cardano-sidechains/03-example-evm-sidechain/02-create-and-fund-accounts.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/02-create-and-fund-accounts.mdx
@@ -11,7 +11,7 @@ metaTitle: Create and fund accounts
 
 In this tutorial, you will learn how to claim test ada tokens on the main chain testnet (to pay for main chain transaction fees).
 
-*Note: This is a dedicated Cardano testnet seperate from Preview or Preprod testnets.*
+*Note: This is a dedicated Cardano testnet separate from the Preview and Preprod testnets.*
 
 ## Generating keys
 
