add a link to the scripts section

--- a/content/05-cardano-testnet/02-about/03-secp.mdx
+++ b/content/05-cardano-testnet/02-about/03-secp.mdx
@@ -17,7 +17,7 @@ To get started:
 
 -   check the ['Getting started' tutorial](https://docs.cardano.org/cardano-testnet/getting-started)
 -   track the [ecosystem readiness page for the SECP upgrade](https://iohk.zendesk.com/hc/en-us/articles/14669691361433-Ecosystem-readiness-for-the-SECP-upgrade)
--   see example scripts below
+-   see [example scripts below](https://docs.cardano.org/cardano-testnet/about/secp/#examplescripts)
 
 ## About ECC
 
