--- a/content/08-cardano-sidechains/03-example-evm-sidechain/04-deploy-smart-contracts/02-setup-development.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/04-deploy-smart-contracts/02-setup-development.mdx
@@ -85,7 +85,7 @@ To verify that the smart contract was deployed on the sidechain testnet you can:
 # HardHat
 This tutorial will show you how to deploy a Solidity smart contract to the EVM sidechain testnet using Hardhat. [Hardhat](https://hardhat.org/) is a popular development environment for Ethereum software.
 
-- [Node.js](https://nodejs.org/en/) v10 or later
+- [Node.js](https://nodejs.org/en/) version 14 or later.
 - [HardHat](https://hardhat.org/)
 
 ## Prerequisites
