--- a/content/08-cardano-sidechains/03-example-evm-sidechain/04-deploy-smart-contracts/02-setup-development.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/04-deploy-smart-contracts/02-setup-development.mdx
@@ -249,7 +249,7 @@ This tutorial will show you how to deploy a Solidity smart contract to the EVM s
 
 Install the following dependencies:
 
-- [Node.js](https://nodejs.org/en/) version 8 or later.
+- [Node.js](https://nodejs.org/en/) LTS version.
 - [Truffle Suite](https://trufflesuite.com/truffle/)
 
 Check Node.js and NPM are installed:
