Update consensus overview

--- a/content/03-learn/07-consensus-explained.mdx
+++ b/content/03-learn/07-consensus-explained.mdx
@@ -3,35 +3,33 @@ title: Consensus explained
 metaTitle: Consensus explained
 ---
 
-Consensus is the process of reaching a majority opinion by everyone
-involved in running the blockchain. Agreement must be made on which blocks to
-produce, which chain to adopt, and to determine the single state of the network.
-The consensus protocol determines how individual nodes assess the current state
-of the ledger system and reach a consensus. 
+Consensus is the process of reaching a majority opinion by everyone involved in running the blockchain. An agreement must be made on which blocks to produce, which chain to adopt and to determine the single state of the network. The consensus protocol determines how individual nodes assess the current state of the ledger system and reach a consensus.
+
+Blockchains create consensus by allowing participants to bundle transactions that others have submitted to the system in blocks, and add them to their chain (sequence of blocks). Determining who is allowed to produce a block when, and what to do in case of conflicts, (such as two participants adding different blocks at the same point of the chain), is the purpose of the different consensus protocols.
 
 The protocol has three main responsibilities:
 
-- Perform a leader check and decide if a block should be produced
-- Handle chain selection
-- Verify produced blocks
+-   Perform a leader check and decide if a block should be produced
+-   Handle chain selection
+-   Verify produced blocks
+   
+## About Ouroboros
 
-Blockchains create consensus by allowing participants to bundle transactions
-that others have submitted to the system in _blocks_, and add them to their
-_chain_ (sequence of blocks). Determining who is allowed to produce a block
-when, and what to do in case of conflicts, (such as two participants adding
-different blocks at the same point of the chain), is the purpose of the
-different consensus protocols. 
+Cardano runs on the Ouroboros consensus protocol, which was delivered with several peer-reviewed papers presented at top-tier conferences and publications in the area of cybersecurity and cryptography. Rather than relying on 'miners' (as in proof-of-work protocols) to solve computationally complex equations to create new blocks – and rewarding the first to do so – proof of stake selects [stake pools to create new blocks](https://docs.cardano.org/new-to-cardano/cardano-nodes/#howdoesitwork) based on the stake they control in the network.
 
+## How Ouroboros works
 
-[Ouroboros](https://iohk.io/en/blog/posts/2020/06/23/the-ouroboros-path-to-decentralization/), 
-our ground-breaking proof-of-stake consensus protocol, is proven to have the same
-security guarantees as proof-of-work. Ouroboros establishes security guarantees, and the protocol
-was delivered with several peer-reviewed papers presented in top-tier conferences and
-publications in the area of cybersecurity and cryptography. Different
-[implementations of Ouroboros](https://iohk.io/en/blog/posts/2022/06/03/from-classic-to-chronos-the-implementations-of-ouroboros-explained/)
-have been developed. For further details on each flavour of Ouroboros, you can
-read the technical specifications for
-[Classic](https://iohk.io/en/research/library/papers/ouroborosa-provably-secure-proof-of-stake-blockchain-protocol/),
-[Byzantine Fault Tolerance (BFT)](https://iohk.io/en/research/library/papers/ouroboros-bfta-simple-byzantine-fault-tolerant-consensus-protocol/),
-[Genesis](https://iohk.io/en/research/library/papers/ouroboros-genesiscomposable-proof-of-stake-blockchains-with-dynamic-availability/), and 
-[Praos](https://iohk.io/en/research/library/papers/ouroboros-praosan-adaptively-securesemi-synchronous-proof-of-stake-protocol/).
+Ouroboros divides time on Cardano into epochs where each epoch is divided into slots. A slot is a short period of time in which a block can be created. Grouping slots into epochs is central to adjusting the leader election process to the dynamically changing stake distribution.
+
+Central to Ouroboros’ design is that it must retain its security in the presence of attacks. As such, the protocol has built-in tolerance to prevent attackers from propagating alternative versions of the blockchain and assumes that an adversary may send arbitrary messages to any participant at any time. The protocol is guaranteed to be secure in the so-called synchronous setting (that is, with strong guarantees on message delivery times) so long as more than 51% of the stake is controlled by honest participants (that is, those following the protocol).
+
+A slot leader is elected for each slot, who is responsible for adding a block to the chain and passing it to the next slot leader. To protect against adversarial attempts to subvert the protocol, each new slot leader is required to consider the last few blocks of the received chain as transient: only the chain that precedes the prespecified number of transient blocks is considered settled. This is also referred to as the settlement delay. Among other things, this means that a stakeholder can go offline and still be synced to the blockchain, so long as it’s not for more than the settlement delay.
+
+Within the Ouroboros protocol, each network node stores a copy of the transaction mempool – where transactions are added if they are consistent with existing transactions – and the blockchain. The locally stored blockchain is replaced when the node becomes aware of an alternative, longer valid chain.
+
+Read more about the different versions of Ouroboros here:
+
+-   [Ouroboros overview](https://docs.cardano.org/learn/ouroboros-overview)
+-   [From Classic to Chronos: the implementations of Ouroboros explained](https://iohk.io/en/blog/posts/2022/06/03/from-classic-to-chronos-the-implementations-of-ouroboros-explained/)
+-   [Ouroboros Chronos provides the first high-resilience, cryptographic time source based on blockchain technology](https://iohk.io/en/blog/posts/2021/10/27/ouroboros-chronos-provides-the-first-high-resilience-cryptographic-time-source-based-on-blockchain/) blog post
+-   [Ouroboros Genesis: enhanced security in a dynamic environment](https://iohk.io/en/blog/posts/2023/02/09/ouroboros-genesis-enhanced-security-in-a-dynamic-environment/) blog post.
