--- a/content/03-learn/02-cardano-node.mdx
+++ b/content/03-learn/02-cardano-node.mdx
@@ -18,3 +18,5 @@ logging and monitoring. Note that cardano-node no longer incorporates wallet or
 explorer functionality. The wallet backend (WBE) and explorer backend are separate
 components that run in separate external processes that communicate with the
 node via local Inter-Process Communication (IPC).
+
+Also, see [how Cardano nodes work here](https://docs.cardano.org/new-to-cardano/cardano-nodes).
