--- a/content/08-cardano-sidechains/03-example-evm-sidechain/05-sidechain-token.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/05-sidechain-token.mdx
@@ -17,7 +17,7 @@ IO Global maintains a faucet at https://faucet.sidechain.evmtestnet.iohkdev.io/ 
 
 ## What is Test Ada?
 
-Test Ada (`tAda`) is the native token of the *dedicated* Cardano testnet (separate from the Preview and Preprod testnets). `tAda` is required to pay for transaction fees conducted on the Cardano testnet. `tADa` carries no real world value.
+Test Ada (`tAda`) is the native token of the *dedicated* Cardano testnet (separate from the preview and pre-production testing environments). `tAda` is required to pay for transaction fees conducted on the Cardano testnet. `tADa` carries no real world value.
 
 ### How to get tAda? 
 
