add references to sc tools
Addresses #461

--- a/content/02-new-to-cardano/10-what-is-a-smart-contract.mdx
+++ b/content/02-new-to-cardano/10-what-is-a-smart-contract.mdx
@@ -35,6 +35,11 @@ contracts using such programming languages as:
   custom instruments for their customers and clients, for example. The Marlowe
   language itself is now embedded in both JavaScript and Haskell offering a
   choice of editors depending on developers’ preference and skillset.
+  
+Currently, there are more smart contract languages and tools to build on Cardano. For more details, see:
+
+- [Plutus tooling](https://docs.cardano.org/plutus/plutus-resources/#plutustooling)
+- [A list of community-built developer tools on Cardano](https://www.essentialcardano.io/article/a-list-of-community-built-developer-tools-on-cardano)
 
 #### Related Topics
 
