--- a/content/04-explore-cardano/04-cardano-network/01-about-the-cardano-network.mdx
+++ b/content/04-explore-cardano/04-cardano-network/01-about-the-cardano-network.mdx
@@ -9,8 +9,8 @@ The networking layer is the driving force for delivering information exchange re
 
 Follow these links to find detailed specifications of:
 
-+ [The Shelley networking protocol](https://hydra.iohk.io/build/5866649/download/2/network-spec.pdf) 
-+ [An introduction to the design of data diffusion and networking for Cardano Shelley.](https://hydra.iohk.io/build/4110312/download/1/network-design.pdf)  
++ [The Shelley networking protocol](https://input-output-hk.github.io/ouroboros-network/pdfs/network-spec/network-spec.pdf) 
++ [An introduction to the design of data diffusion and networking for Cardano Shelley.](https://iohk.io/en/research/library/papers/introduction-to-the-design-of-the-data-diffusion-and-networking-for-cardano-shelley/)  
 
 ## Data flow between and within nodes 
 To understand how nodes communicate with each other, let’s suppose that node *A* is connected to node *B*. Then, the Ouroboros protocol schedules a node *N* to generate a new block in a given time slot. Depending on the location of nodes *A*, *B*, and *N* in the network topology, and whether a new block arrives first at *A* or *B*, node *A* can be either upstream or downstream of node *B*. 
