delete outdated link

--- a/content/07-cardano-components/07-smash.mdx
+++ b/content/07-cardano-components/07-smash.mdx
@@ -88,10 +88,7 @@ consumers of stake pool metadata to choose which policy to follow, if any.
 
 SMASH can be configured with policies to filter out metadata based on block
 lists or reserved ticker names. Daedalus can be configured to use any SMASH
-server. You can also find more information about the pool metadata (the
-[PoolMetaData record](https://github.com/input-output-hk/cardano-ledger-specs/blob/4458fdba7e2211f63e7f28ecd3f9b55b02eee071/shelley/chain-and-ledger/executable-spec/src/Shelley/Spec/Ledger/TxData.hs#L62))
-and read the Design Specification for Delegation and Incentives in Cardano
-([section 4.2 Stake Pool Metadata, p.30](https://hydra.iohk.io/build/790053/download/1/delegation_design_spec.pdf)).
+server. You can also find more information about the pool metadata [here](https://github.com/input-output-hk/cardano-ledger-specs/blob/4458fdba7e2211f63e7f28ecd3f9b55b02eee071/shelley/chain-and-ledger/executable-spec/src/Shelley/Spec/Ledger/TxData.hs#L62).
 
 ### SMASH use cases
 
