Plutus Pioneer program: Updating text for Haskell learning resources.

--- a/content/13-pioneer-programs/01-plutus-pioneers.mdx
+++ b/content/13-pioneer-programs/01-plutus-pioneers.mdx
@@ -15,7 +15,7 @@ It is a program to recruit and train developers in Plutus for the Cardano ecosys
 
 ## What prior experience do I need?
 
-This course is not for coding beginners. While you do not need to be an expert in formal methods, programming experience and a general aptitude for logical and mathematical thinking are highly desirable. Some prior knowledge of Haskell or functional programming is also recommended, as Plutus is heavily based on Haskell and includes advanced features like Template Haskell, type-level programming, and effect systems. We recommend that you read the  [Learn You a Haskell guide](http://learnyouahaskell.com/)  before taking the course.
+This course is not for coding beginners. While you do not need to be an expert in formal methods, programming experience and a general aptitude for logical and mathematical thinking are highly desirable. Some prior knowledge of Haskell or functional programming is also recommended, as Plutus is heavily based on Haskell and includes advanced features like Template Haskell, type-level programming, and effect systems. We recommend that you work through **IOGs** official [Haskell Course](https://github.com/input-output-hk/haskell-course). You can also read the [Learn You a Haskell](http://learnyouahaskell.com/) book.
 
 ## What can I expect to learn?
 
