--- a/content/13-pioneer-programs/01-plutus-pioneers.mdx
+++ b/content/13-pioneer-programs/01-plutus-pioneers.mdx
@@ -39,7 +39,7 @@ We are launching our fourth cohort on February 20th, so please register your int
 
 ## How can I register for the Plutus Pioneer program?
 
-If you are interested in joining a future cohort of this program, please complete the registration form below. You will receive a short application form, and we will be in touch soon.
+If you are interested in joining a future cohort of this program, please complete the registration form below and we will be in touch soon.
 
 ## Will I be certified?
 
