fix: Typo in 'Plutus use cases'

--- a/content/10-plutus/05-Plutus-use-cases.mdx
+++ b/content/10-plutus/05-Plutus-use-cases.mdx
@@ -15,6 +15,6 @@ Typical high-level use cases for Plutus implementations include, but are not res
 
 - **Decentralized finance (DeFi) tools** – creating multipurpose dashboards (web-based or mobile) that integrate with smart contracts to bring value to native token traders. These products can have multiple functional dashboards to show balances of tokens and liquidity pools, and so on. They can also bundle together multiple functions such as swapping and providing liquidity into a single transaction, making DeFi adoption easier.
 
-- **Crypto-backed stable coins** – creating a new stable coin implementation based on chain collateral using the Atala identity system on Cardano. This implmentation can include transfer restrictions, asset freezing, as so on.
+- **Crypto-backed stable coins** – creating a new stable coin implementation based on chain collateral using the Atala identity system on Cardano. This implementation can include transfer restrictions, asset freezing, as so on.
 
 
